# HamraheAvval_Smart_Parking

./: LICENSE  README.md  release-note.md
API/: .gitignore  composer.json
API/app/: User.php
API/bootstrap/: app.php
API/config/: app.php  database.php  filesystems.php
API/jsonFiles/: Building.json  CPR_Paya_DB.rar  Camera.json  Reserve.json  car.json  slot.json  user.json
API/routes/: api.php  web.php
Certificate/CA_4/: 1400.pfx  MCI_PK.key  certificate.pem  new_cer.cer
Pinger/: .pdm.toml  pyproject.toml
Pinger/__pypackages__/: .gitignore
Pinger/docs/: how_it_works.docx
Pinger/src/: brain.py  config.py  main.py  model.py
Secrity_new_design/securityapp/: .gitignore  pubspec.yaml
docs/Uis/: outdoorMonitor.xd  payaUsers.xd
docs/proposal/: test.md
payausers/: README.md  pubspec.yaml
payausers/lib/: main.dart
payausers/test/: widget_test.dart
proposal/: test.org
pwa/web/: flutter_service_worker.js  index.html  main.dart.js  manifest.json  version.json
security/: pubspec.yaml
security/lib/: camera_insertion.dart  confirmation_page.dart  darkmode_page.dart  login_page.dart  main.dart  security_app.dart  set_building.dart  static_insertion.dart
securityapp/: README.md  pubspec.yaml
securityapp/lib/: adding_data.dart  camera_grid.dart  camera_insertion.dart  carDetailsPage.dart  carExitComplete.dart  completing_information.dart  confirmation_page.dart  darkmode_page.dart  edit_profile.dart  forget_pass.dart  login_page.dart  main.dart  (+7 more)
users_pwa/: README.md  pubspec.yaml
users_pwa_no_fcm/: pubspec.yaml
webSocketSlotView/: index.html
(+543 files in other folders)
